# pyproject.toml

[build-system]
requires = ["setuptools >= 64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "mcce4_tools"

description = "Tools for processing & analyzing MCCE4 simulation outputs."
readme = "README.md"

maintainers = [
    {name = "Cat Chenal @ GunnerLab"},
]

license-files = ["LICENSE"]

keywords = [
    "biophysics",
    "proteomics",
    "cheminformatics",
    "mcce4 output analysis",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Biophysicists, Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]

requires-python = "==3.10.*"

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Source = "https://github.com/GunnerLab/MCCE4-Tools"
